--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -16,14 +16,25 @@ img {
 #calc {
     display: none;
 }
+
 .x:hover {
     background-color: red;
 }
+
 .U:hover {
     background-color: rgb(83, 80, 80);
 }
+
 ._:hover {
     background-color: rgb(83, 80, 80);
+}
+
+.cim {
+    font-size: 20px;
+}
+
+.calcBut:hover {
+    cursor: pointer;
 }
 
 .grid-container {
@@ -31,6 +42,8 @@ img {
     grid-template-columns: 90px 100px 90px 90px;
     background-color: #313335;
     padding: 5px;
+    border: 1px solid rgb(13, 182, 168);
+    border-radius: 5px;
     column-gap: 4px;
     row-gap: 4px;
 }
@@ -39,6 +52,7 @@ img {
     background-color: rgba(66, 62, 62, 0.8);
     color: white;
     border: none;
+    border-radius: 5px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -52,6 +66,7 @@ img {
     background-color: rgba(83, 80, 80, 0.8);
     color: white;
     border: none;
+    border-radius: 5px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -65,6 +80,7 @@ img {
     background-color: rgb(13, 182, 168);
     color: white;
     border: none;
+    border-radius: 5px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -83,6 +99,7 @@ img {
     justify-content: end;
     align-items: center;
 }
+
 .grid-nagyob-item {
     grid-column: 1/5;
     height: 20px;
